--- a/ai-services/requirements.txt
+++ b/ai-services/requirements.txt
@@ -79,6 +79,23 @@ google-cloud-translate==3.11.3
 openai==1.3.7
 huggingface-hub==0.19.4
 
+# Model Management
+joblib==1.3.2
+mlflow==2.8.1
+dvc==3.27.0
+onnx==1.15.0
+onnxruntime==1.16.3
+
+# Model Training & Optimization
+optuna==3.4.0
+ray[tune]==2.8.0
+hyperopt==0.2.7
+
+# Model Serving
+torchserve==0.8.2
+bentoml==1.1.14
+seldon-core==1.18.0
+
 # Utilities
 tqdm==4.66.1
 click==8.1.7
